build-sys: add missing files to include/Makefile.am
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,5 +1,19 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-dist_noinst_HEADERS = carefulputc.h env.h linux_reboot.h md5.h \
-	nls.h pathnames.h setproctitle.h widechar.h xstrncpy.h \
-	linux_version.h blkdev.h bitops.h swapheader.h
+dist_noinst_HEADERS = \
+	bitops.h \
+	blkdev.h \
+	canonicalize.h \
+	carefulputc.h \
+	env.h \
+	fsprobe.h \
+	ismounted.h \
+	linux_reboot.h \
+	linux_version.h \
+	md5.h \
+	nls.h \
+	pathnames.h \
+	setproctitle.h \
+	swapheader.h \
+	widechar.h \
+	xstrncpy.h
