lib: wholedisk - extend API, add test program
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,16 +1,15 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-noinst_PROGRAMS = test_blkdev test_ismounted test_pttype
+AM_CPPFLAGS += -DTEST_PROGRAM
+
+noinst_PROGRAMS = test_blkdev test_ismounted test_pttype test_wholedisk
 
 test_blkdev_SOURCES = blkdev.c
 test_ismounted_SOURCES = ismounted.c
 test_pttype_SOURCES = pttype.c
+test_wholedisk_SOURCES = wholedisk.c
 
 if LINUX
 test_blkdev_SOURCES += linux_version.c
 endif
-
-test_blkdev_CFLAGS = -DTEST_PROGRAM
-test_ismounted_CFLAGS = -DTEST_PROGRAM
-test_pttype_CFLAGS = -DTEST_PROGRAM
 
