--- a/config/include-Makefile.am
+++ b/config/include-Makefile.am
@@ -16,9 +16,9 @@ dist_noinst_DATA = $(dist_man_MANS)
 
 # Paths to in-tree libraries (use ul_ prefix to avoid possible collisions)
 #
-ul_libblkid_srcdir = $(top_builddir)/libs/blkid/src
-ul_libblkid_la = $(ul_libblkid_srcdir)/libblkid.la
+ul_libblkid_srcdir = $(top_srcdir)/libs/blkid/src
+ul_libblkid_la = $(top_builddir)/libs/blkid/src/libblkid.la
 
 $(ul_libblkid_la):
-	$(MAKE) -C $(ul_libblkid_srcdir)
+	$(MAKE) -C $(ul_libblkid_builddir)
 
