po: rewrite update-potfiles script
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -39,6 +39,60 @@ lib/ismounted.c
 lib/linux_version.c
 lib/md5.c
 lib/pttype.c
+libs/blkid/bin/blkid.c
+libs/blkid/bin/findfs.c
+libs/blkid/src/cache.c
+libs/blkid/src/config.c
+libs/blkid/src/dev.c
+libs/blkid/src/devname.c
+libs/blkid/src/devno.c
+libs/blkid/src/encode.c
+libs/blkid/src/evaluate.c
+libs/blkid/src/getsize.c
+libs/blkid/src/llseek.c
+libs/blkid/src/probe.c
+libs/blkid/src/probers/adaptec_raid.c
+libs/blkid/src/probers/btrfs.c
+libs/blkid/src/probers/cramfs.c
+libs/blkid/src/probers/ddf_raid.c
+libs/blkid/src/probers/ext.c
+libs/blkid/src/probers/gfs.c
+libs/blkid/src/probers/hfs.c
+libs/blkid/src/probers/highpoint_raid.c
+libs/blkid/src/probers/hpfs.c
+libs/blkid/src/probers/iso9660.c
+libs/blkid/src/probers/isw_raid.c
+libs/blkid/src/probers/jfs.c
+libs/blkid/src/probers/jmicron_raid.c
+libs/blkid/src/probers/linux_raid.c
+libs/blkid/src/probers/lsi_raid.c
+libs/blkid/src/probers/luks.c
+libs/blkid/src/probers/lvm.c
+libs/blkid/src/probers/minix.c
+libs/blkid/src/probers/netware.c
+libs/blkid/src/probers/ntfs.c
+libs/blkid/src/probers/nvidia_raid.c
+libs/blkid/src/probers/ocfs.c
+libs/blkid/src/probers/promise_raid.c
+libs/blkid/src/probers/reiserfs.c
+libs/blkid/src/probers/romfs.c
+libs/blkid/src/probers/silicon_raid.c
+libs/blkid/src/probers/squashfs.c
+libs/blkid/src/probers/swap.c
+libs/blkid/src/probers/sysv.c
+libs/blkid/src/probers/udf.c
+libs/blkid/src/probers/ufs.c
+libs/blkid/src/probers/vfat.c
+libs/blkid/src/probers/via_raid.c
+libs/blkid/src/probers/vxfs.c
+libs/blkid/src/probers/xfs.c
+libs/blkid/src/read.c
+libs/blkid/src/resolve.c
+libs/blkid/src/save.c
+libs/blkid/src/tag.c
+libs/blkid/src/tst_types.c
+libs/blkid/src/verify.c
+libs/blkid/src/version.c
 lib/setproctitle.c
 lib/wholedisk.c
 login-utils/agetty.c
