--- a/shlibs/blkid/src/probers/Makefile.am
+++ b/shlibs/blkid/src/probers/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-AM_CPPFLAGS += -I$(top_srcdir)/libs/blkid/src
+AM_CPPFLAGS += -I$(ul_libblkid_srcdir)
 
 noinst_LTLIBRARIES = libblkid_probers.la
 libblkid_probers_la_SOURCES = \
