cal: uClibc has langinfo.h but not _NL_TIME_WEEK_1STDAY.
Signed-off-by: Tom Prince <cougar@hermes>

--- a/configure.ac
+++ b/configure.ac
@@ -105,6 +105,8 @@ AC_CHECK_HEADERS([linux/raw.h],
 		 [AM_CONDITIONAL([HAVE_RAW], [true])],
 		 [AM_CONDITIONAL([HAVE_RAW], [false])])
 
+AC_CHECK_DECLS([_NL_TIME_WEEK_1STDAY],[],[],[[#include <langinfo.h>]])
+
 AC_CHECK_FUNCS(
 	[inet_aton \
 	fsync \
