libuuid: add --disable-libuuid and LIBUUID_VERSION
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/uuid/uuid.pc.in
+++ b/shlibs/uuid/uuid.pc.in
@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: uuid
 Description: Universally unique id library
-Version: @E2FSPROGS_VERSION@
+Version: @LIBUUID_VERSION@
 Requires:
 Cflags: -I${includedir}/uuid
 Libs: -L${libdir} -luuid
