mount: fix undefined reference to `security_get_initial_context'
> Gentoo-hardened stable have: sys-libs/libselinux-1.34.14
> I have:
> mount.c:(.text+0x12ce): undefined reference to `security_get_initial_context'

Reported-by: Максим Бритов <maxim.britov@gmail.com>
Addresses-Gentoo-Bug: #270168
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -656,6 +656,11 @@ fi
 if test "x$have_selinux" = xyes; then
   SELINUX_LIBS="-lselinux -lsepol"
   SELINUX_LIBS_STATIC="-lselinux -lsepol"
+  old_LDFLAGS="$LDFLAGS"
+  LDFLAGS="$LDFLAGS $SELINUX_LIBS"
+  # This function is missing in old libselinux 1.xx versions
+  AC_CHECK_FUNCS([security_get_initial_context])
+  LDFLAGS="$old_LDFLAGS"
 fi
 AC_SUBST([SELINUX_LIBS])
 AC_SUBST([SELINUX_LIBS_STATIC])
