uuidd: new command (UUID daemon from e2fsprogs)
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -137,6 +137,8 @@ AC_CHECK_FUNCS(
 	getdtablesize \
 	getrlimit \
 	srandom \
+	setresgid \
+	setresuid \
 	inotify_init \
 	prctl \
 	__secure_getenv \
