po: refresh POTFILES.in
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -39,60 +39,6 @@ lib/ismounted.c
 lib/linux_version.c
 lib/md5.c
 lib/pttype.c
-libs/blkid/bin/blkid.c
-libs/blkid/bin/findfs.c
-libs/blkid/src/cache.c
-libs/blkid/src/config.c
-libs/blkid/src/dev.c
-libs/blkid/src/devname.c
-libs/blkid/src/devno.c
-libs/blkid/src/encode.c
-libs/blkid/src/evaluate.c
-libs/blkid/src/getsize.c
-libs/blkid/src/llseek.c
-libs/blkid/src/probe.c
-libs/blkid/src/probers/adaptec_raid.c
-libs/blkid/src/probers/btrfs.c
-libs/blkid/src/probers/cramfs.c
-libs/blkid/src/probers/ddf_raid.c
-libs/blkid/src/probers/ext.c
-libs/blkid/src/probers/gfs.c
-libs/blkid/src/probers/hfs.c
-libs/blkid/src/probers/highpoint_raid.c
-libs/blkid/src/probers/hpfs.c
-libs/blkid/src/probers/iso9660.c
-libs/blkid/src/probers/isw_raid.c
-libs/blkid/src/probers/jfs.c
-libs/blkid/src/probers/jmicron_raid.c
-libs/blkid/src/probers/linux_raid.c
-libs/blkid/src/probers/lsi_raid.c
-libs/blkid/src/probers/luks.c
-libs/blkid/src/probers/lvm.c
-libs/blkid/src/probers/minix.c
-libs/blkid/src/probers/netware.c
-libs/blkid/src/probers/ntfs.c
-libs/blkid/src/probers/nvidia_raid.c
-libs/blkid/src/probers/ocfs.c
-libs/blkid/src/probers/promise_raid.c
-libs/blkid/src/probers/reiserfs.c
-libs/blkid/src/probers/romfs.c
-libs/blkid/src/probers/silicon_raid.c
-libs/blkid/src/probers/squashfs.c
-libs/blkid/src/probers/swap.c
-libs/blkid/src/probers/sysv.c
-libs/blkid/src/probers/udf.c
-libs/blkid/src/probers/ufs.c
-libs/blkid/src/probers/vfat.c
-libs/blkid/src/probers/via_raid.c
-libs/blkid/src/probers/vxfs.c
-libs/blkid/src/probers/xfs.c
-libs/blkid/src/read.c
-libs/blkid/src/resolve.c
-libs/blkid/src/save.c
-libs/blkid/src/tag.c
-libs/blkid/src/tst_types.c
-libs/blkid/src/verify.c
-libs/blkid/src/version.c
 lib/setproctitle.c
 lib/wholedisk.c
 login-utils/agetty.c
@@ -124,6 +70,8 @@ misc-utils/rename.c
 misc-utils/script.c
 misc-utils/scriptreplay.c
 misc-utils/setterm.c
+misc-utils/uuidd.c
+misc-utils/uuidgen.c
 misc-utils/whereis.c
 misc-utils/write.c
 mount/devname.c
@@ -148,6 +96,73 @@ partx/unixware.c
 schedutils/chrt.c
 schedutils/ionice.c
 schedutils/taskset.c
+shlibs/blkid/bin/blkid.c
+shlibs/blkid/bin/findfs.c
+shlibs/blkid/src/cache.c
+shlibs/blkid/src/config.c
+shlibs/blkid/src/dev.c
+shlibs/blkid/src/devname.c
+shlibs/blkid/src/devno.c
+shlibs/blkid/src/encode.c
+shlibs/blkid/src/evaluate.c
+shlibs/blkid/src/getsize.c
+shlibs/blkid/src/llseek.c
+shlibs/blkid/src/probe.c
+shlibs/blkid/src/probers/adaptec_raid.c
+shlibs/blkid/src/probers/btrfs.c
+shlibs/blkid/src/probers/cramfs.c
+shlibs/blkid/src/probers/ddf_raid.c
+shlibs/blkid/src/probers/ext.c
+shlibs/blkid/src/probers/gfs.c
+shlibs/blkid/src/probers/hfs.c
+shlibs/blkid/src/probers/highpoint_raid.c
+shlibs/blkid/src/probers/hpfs.c
+shlibs/blkid/src/probers/iso9660.c
+shlibs/blkid/src/probers/isw_raid.c
+shlibs/blkid/src/probers/jfs.c
+shlibs/blkid/src/probers/jmicron_raid.c
+shlibs/blkid/src/probers/linux_raid.c
+shlibs/blkid/src/probers/lsi_raid.c
+shlibs/blkid/src/probers/luks.c
+shlibs/blkid/src/probers/lvm.c
+shlibs/blkid/src/probers/minix.c
+shlibs/blkid/src/probers/netware.c
+shlibs/blkid/src/probers/ntfs.c
+shlibs/blkid/src/probers/nvidia_raid.c
+shlibs/blkid/src/probers/ocfs.c
+shlibs/blkid/src/probers/promise_raid.c
+shlibs/blkid/src/probers/reiserfs.c
+shlibs/blkid/src/probers/romfs.c
+shlibs/blkid/src/probers/silicon_raid.c
+shlibs/blkid/src/probers/squashfs.c
+shlibs/blkid/src/probers/swap.c
+shlibs/blkid/src/probers/sysv.c
+shlibs/blkid/src/probers/udf.c
+shlibs/blkid/src/probers/ufs.c
+shlibs/blkid/src/probers/vfat.c
+shlibs/blkid/src/probers/via_raid.c
+shlibs/blkid/src/probers/vxfs.c
+shlibs/blkid/src/probers/xfs.c
+shlibs/blkid/src/probers/zfs.c
+shlibs/blkid/src/read.c
+shlibs/blkid/src/resolve.c
+shlibs/blkid/src/save.c
+shlibs/blkid/src/tag.c
+shlibs/blkid/src/tst_types.c
+shlibs/blkid/src/verify.c
+shlibs/blkid/src/version.c
+shlibs/uuid/src/clear.c
+shlibs/uuid/src/compare.c
+shlibs/uuid/src/copy.c
+shlibs/uuid/src/gen_uuid.c
+shlibs/uuid/src/gen_uuid_nt.c
+shlibs/uuid/src/isnull.c
+shlibs/uuid/src/pack.c
+shlibs/uuid/src/parse.c
+shlibs/uuid/src/tst_uuid.c
+shlibs/uuid/src/unpack.c
+shlibs/uuid/src/unparse.c
+shlibs/uuid/src/uuid_time.c
 sys-utils/arch.c
 sys-utils/ctrlaltdel.c
 sys-utils/cytune.c
