switch_root: new command
Copied from Dracut project:
git://dracut.git.sourceforge.net/gitroot/dracut

switch_root history in dracut.git repository:

$ git shortlog switch_root.c
Harald Hoyer (5):
      replace switch_root shell script with binary
      add \n to switch_root
      use switch_root code from http://pjones.fedorapeople.org/mkstart/usr/lib/mkstart/switchroot.c
      mount move instead of umount and fix the search for fallback inits
      setsid() and set controlling terminal for real /sbin/init

Victor Lowther (2):
      Simplify switch_root.c a bit
      Remove all files on the initramfs before switching root

Signed-off-by: Peter Jones <pjones@redhat.com>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -180,6 +180,7 @@ sys-utils/renice.c
 sys-utils/rtcwake.c
 sys-utils/setarch.c
 sys-utils/setsid.c
+sys-utils/switch_root.c
 sys-utils/tunelp.c
 text-utils/col.c
 text-utils/colcrt.c
