buildsys: move $usr{bin,sbin,lib}execdir definition to ./configure
We need to use $usr{bin,sbin,lib}execdir variables in *.pc.in files
and these files are generated by ./configure script.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -49,6 +49,17 @@ case ${libdir} in
 esac
 AC_SUBST([libdirname])
 
+# The original default values of {bin,sbin,lib}dir
+usrbinexecdir='${exec_prefix}/bin'
+AC_SUBST([usrbinexecdir])
+
+usrsbinexecdir='${exec_prefix}/sbin'
+AC_SUBST([usrsbinexecdir])
+
+usrlibexecdir='${exec_prefix}/'$libdirname
+AC_SUBST([usrlibexecdir])
+
+
 AC_PROG_CC_STDC
 AC_GNU_SOURCE
 AC_CANONICAL_HOST
@@ -916,5 +927,6 @@ tests/helpers/Makefile
 tests/Makefile
 text-utils/Makefile
 ])
+
 
 AC_OUTPUT
