uuidd: move uuidd.rc to misc-utils directory
The file should be on more visible place.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/misc-utils/Makefile.am
+++ b/misc-utils/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-EXTRA_DIST = README.flushb
+EXTRA_DIST = README.flushb uuidd.rc
 
 bin_PROGRAMS =
 usrsbinexec_PROGRAMS =
