blkid: move to misc-utils/ directory
The others utilities are in one of the top-level directories. That's
confusing to have blkid(8) and findfs(8) in shlibs/ tree.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/shlibs/blkid/Makefile.am
+++ b/shlibs/blkid/Makefile.am
@@ -1,6 +1,6 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-SUBDIRS = src bin
+SUBDIRS = src
 
 # pkg-config stuff
 pkgconfigdir = $(usrlibexecdir)/pkgconfig
